update complete backpack

--- a/datastructr&algorithm/14深入剖析完全背包.md
+++ b/datastructr&algorithm/14深入剖析完全背包.md
@@ -92,7 +92,7 @@ dp[i - 1][j - v[i] * T_i] + w[i] * T_i\\
 $$
 其中 $T_i = \lfloor\frac{V}{v_i}\rfloor$。
 
-因此完全背包转多重背包的代码如下（进行数组优化之后的代码，如果你还不了解数组的优化，哪可以阅读[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)当中数组优化的小节）：
+因此完全背包转多重背包的代码如下（进行数组优化之后的代码，如果你还不了解数组的优化，可以先阅读[完全背包](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484544&idx=1&sn=c4de17583010430fa519ecd1703bedea&chksm=cf0c9889f87b119fe5621bacf417b163020dcd8a7c0ed63df94de20ba67ae742b4d86e22ae16&token=883596793&lang=zh_CN#rd)、[深入剖析多重背包问题（上篇）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484627&idx=1&sn=ac975cb31ba1af89425558cfe4442258&chksm=cf0c98daf87b11cc4178c55864ba8eeecd741aaa49bde712aca1c5999f7dbbbbd0997beb6cc2&token=1311889589&lang=zh_CN#rd)和[深入剖析多重背包问题（下篇）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247484703&idx=1&sn=d0fb3c949b99a803a30a5dd1452d7bce&chksm=cf0c9916f87b10002e32bf8acfa298c1201d33793c80beb538ac099024868373e4c7a5b35a53&token=1311889589&lang=zh_CN#rd)当中数组优化的小节）：
 
 ```C++
 
@@ -131,4 +131,18 @@ int main() {
 }
 
 ```
+
+## 总结
+
+在本篇文章当中主要介绍了入和将完全背包转化成多重背包，我们可以知道完全背包的时间复杂度为$O(NV)$，但是如果将完全背包转化成多重背包之后时间复杂度为$O(NVM)$，其中M表示平均每个物品能拿的最大的个数，因此可以知道其实不必将完全背包转化成多重背包，但是可以扩展我们的思维。
+
+
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
