update complete backpack

--- a/datastructr&algorithm/14深入剖析完全背包.md
+++ b/datastructr&algorithm/14深入剖析完全背包.md
@@ -112,6 +112,7 @@ void complete_backpack() {
   // 前面两侧循环和正常的 dp 循环一样
   for (int i = 0; i < N; ++i) {
     for (int j = V; j >= volumes[i]; j--) {
+      // 这里就是根据背包容量进行限制了 j 肯定要大于等于拿的所有物品的容量
       for(int k = 1; j >= volumes[i] * k; k++) {
         dp[j] = max(dp[j], dp[j - volumes[i] * k] + values[i] * k);
       }
@@ -136,7 +137,7 @@ int main() {
 
 在本篇文章当中主要介绍了入和将完全背包转化成多重背包，我们可以知道完全背包的时间复杂度为$O(NV)$，但是如果将完全背包转化成多重背包之后时间复杂度为$O(NVM)$，其中M表示平均每个物品能拿的最大的个数，因此可以知道其实不必将完全背包转化成多重背包，但是可以扩展我们的思维。
 
-
+将完全背包转化成多重背包的最核心的就是背包容量的限制，我们可以通过背包容量有限制这一条件，知道我们能够拿的最大的物品数量，从而将完全背包转化成多重背包问题。
 
 ---
 
