--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -2,4 +2,25 @@
 
 ## 介绍
 
-makefile就是一个可以被make命令解析的文件，他定义了一系列编译的规则，帮助我们更加方便、简洁的去完成编译的过程。在一个大工程当中
+makefile就是一个可以被make命令解析的文件，他定义了一系列编译的规则，帮助我们更加方便、简洁的去完成编译的过程。在一个大工程当中我们会有各种各样的文件，我们可能会分模块去存放各种文件，可能有些文件还依赖其他的文件，因此我们在编译的时候需要先将被依赖的文件先编译，其他文件后编译，而我们使用makefile就可以更好的去完成这件事儿。
+
+## 基本介绍
+
+在很多情况下我们在C/C++的项目当中使用makefile，其实在其他语言的项目也可以使用make和makefile，它不局限于语言的。现在写一个基本的例子：
+
+```makefile
+demo: demo.c
+	gcc demo.c -o demo
+
+clean:
+	rm demo
+```
+
+上面是一个makefile的例子，我们简要说明一下makefile的书写规则：
+
+```makefile
+编译目标:依赖文件
+	编译命令
+```
+
+比如在上面当中
