update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -23,4 +23,13 @@ clean:
 	编译命令
 ```
 
-比如在上面当中
+然后我们使用`make`命令去解释执行`makefile`，我们可以使用`make 编译目标`去执行特定的语句，比如在上面的例子当中我们执行`make demo`的话就会执行`gcc demo.c -o demo`命令。
+
+![](../../images/tools/makfile01.png)
+
+其实上面我们也可以直接使用`make`命令，不需要指定编译目标，因为`make`会自己寻找第一个目标作为被执行的目标。
+
+![](../../images/tools/makfile02.png)
+
+在上面的代码当中我们当我们执行`make`的时候寻找到`makefile`文件的第一个目标`demo`，但是因为我没有改动`demo.c`这个文件，而且这个文件已经编译过了，因此我们没有必要再去编译这个文件，因此`make`命令输出`demo`这个目标已经是最新的了。因此我们在执行`make`执行执行`clean`编译目标先删除`demo`这个编译结果，然后在执行`make`这次它再找到`demo`目标，而此时`demo`已经被删除了，因此会重新编译。
+
