--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -31,5 +31,15 @@ clean:
 
 ![](../../images/tools/makfile02.png)
 
-在上面的代码当中我们当我们执行`make`的时候寻找到`makefile`文件的第一个目标`demo`，但是因为我没有改动`demo.c`这个文件，而且这个文件已经编译过了，因此我们没有必要再去编译这个文件，因此`make`命令输出`demo`这个目标已经是最新的了。因此我们在执行`make`执行执行`clean`编译目标先删除`demo`这个编译结果，然后在执行`make`这次它再找到`demo`目标，而此时`demo`已经被删除了，因此会重新编译。
+在上面的代码当中我们当我们执行`make`的时候寻找到`makefile`文件的第一个目标`demo`，但是因为我没有改动`demo.c`这个文件，而且这个文件已经编译过了，因此我们没有必要再去编译这个文件，这也是`make`给我们提供的一个非常好的特性，我们不需要重新编译已经编译好的文件，这在一个大型项目当中是非常有用的，当我们的项目当中有成千上万的文件的时候，如果我们重新编译每一个文件的话，那么编译的时间消耗是非常大的。因此我们在执行`make`执行执行`clean`编译目标先删除`demo`这个编译结果，然后在执行`make`这次它再找到`demo`目标，而此时`demo`已经被删除了，因此会重新编译。
+
+## Make命令的工作流程
+
+当我们在命令行当中输入`make`的时候他的执行流程如下：
+
+- make命令首先会在当前目录下面寻找makefile或者Makefile文件。
+- 寻找到makefile文件之后，他会在文件当中寻找到一个编译目标，比如在上面的makefile文件当中他会找到`demo`这个编译目标，而不是`clean`这个目标，因为`clean`是第二个编译目标。
+- 然后make会解析编译目标的依赖，如果这个依赖是其他的编译目标A的话，那么make会先完成它依赖的编译目标A的命令，如果它依赖的编译目标A也存在依赖B的话，make就会去执行依赖的B的编译命令，如此的递归下去，知道有所得依赖目标都存在了，才会完成第一个编译目标的编译，这个也很好理解，只有依赖文件都存在了我们才能够完成正确的编译过程。
+
+make编译的过程为寻找编译目标，依赖关系，如果依赖的文件还存在依赖那么make会一层一层的寻找下去，只要所有的依赖都被成功解析了，才会最终执行第一个编译目标的编译命令。
 
