udpate makefile and add a pic

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -41,5 +41,25 @@ clean:
 - 寻找到makefile文件之后，他会在文件当中寻找到一个编译目标，比如在上面的makefile文件当中他会找到`demo`这个编译目标，而不是`clean`这个目标，因为`clean`是第二个编译目标。
 - 然后make会解析编译目标的依赖，如果这个依赖是其他的编译目标A的话，那么make会先完成它依赖的编译目标A的命令，如果它依赖的编译目标A也存在依赖B的话，make就会去执行依赖的B的编译命令，如此的递归下去，知道有所得依赖目标都存在了，才会完成第一个编译目标的编译，这个也很好理解，只有依赖文件都存在了我们才能够完成正确的编译过程。
 
-make编译的过程为寻找编译目标，依赖关系，如果依赖的文件还存在依赖那么make会一层一层的寻找下去，只要所有的依赖都被成功解析了，才会最终执行第一个编译目标的编译命令。
+make编译的过程为寻找编译目标，依赖关系，如果依赖的文件还存在依赖那么make会一层一层的寻找下去，只要所有的依赖都被成功解析了，才会最终执行第一个编译目标的编译命令。但是在makefile当中不被第一个编译目标的目标的编译命令是不会被执行的，比如上面我们执行make的时候会执行`demo`编译目标，但是不会执行`clean`编译目标。
+
+下面我们写一个例子了解make解析依赖的过程：
+
+```makefile
+
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o out
+	echo make 解析编译完成
+
+demo.o: demo.c 
+	gcc -c demo.c -o demo.o
+
+myprint.o: myprint.c 
+	gcc -c myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o
+```
+
+![](../../images/tools/makfile03.png)
 
