--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -65,3 +65,5 @@ clean:
 
 ![](../../images/tools/makfile03.png)
 
+因为我们没有指定编译的目标，因此make会寻找一个编译目标，也就是`main`，但是在`main`当中依赖两个文件`demo.o`和`myprint.o`，因此make会再去执行`demo.o`和`myprint.o`两个编译目标，当这两个编译目标被完成之后才能执行`main`的编译，根据make的输出结果我们可以得到这一个结果的印证。
+
