--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -67,3 +67,27 @@ clean:
 
 因为我们没有指定编译的目标，因此make会寻找一个编译目标，也就是`main`，但是在`main`当中依赖两个文件`demo.o`和`myprint.o`，因此make会再去执行`demo.o`和`myprint.o`两个编译目标，当这两个编译目标被完成之后才能执行`main`的编译，根据make的输出结果我们可以得到这一个结果的印证。
 
+## Makefilex小技巧
+
+### Makefile当中的变量
+
+在makefile当中我们可以定义一些我们的变量这样就可以避免反复输入了。比如我们经常会变编译文件的时候增加一些编译选项，比如像下面这样：
+
+```makefile
+
+cflags=-c
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o out
+
+demo.o: demo.c 
+	gcc $(cflags) demo.c -o demo.o
+
+myprint.o: myprint.c 
+	gcc $(cflags) myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o
+```
+
+在上面的makefile当中我们定义了一个变量`cflags`并且在编译命令当中使用，我们定义变量的方法其实和shell差不多，我们直接使用`=`可以定义变量，然后使用`$(变量名)`可以使用变量，因为上面的例子当中`cflag=-c`比较短，比较简单，但是如果当我们的编译参数很多很长的时候使用变量就非常有效了，而且如果在一个项目当中如果有成千上万个文件我们像统一改变编译时候的参数的话，我们一个一个改是很麻烦的，但是如果我们使用变量就可以做大一改全改。
+
