--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -1,4 +1,4 @@
-# 一文彻底掌握Makefile
+# 彻底掌握Makefile（一）
 
 ## 介绍
 
@@ -58,7 +58,7 @@ myprint.o: myprint.c
 	gcc -c myprint.c -o myprint.o
 
 clean:
-	rm myprint.o demo.o
+	rm myprint.o demo.o out
 ```
 
 执行make之后的结果如下图所示：
@@ -86,8 +86,42 @@ myprint.o: myprint.c
 	gcc $(cflags) myprint.c -o myprint.o
 
 clean:
-	rm myprint.o demo.o
+	rm myprint.o demo.o out
+
 ```
 
-在上面的makefile当中我们定义了一个变量`cflags`并且在编译命令当中使用，我们定义变量的方法其实和shell差不多，我们直接使用`=`可以定义变量，然后使用`$(变量名)`可以使用变量，因为上面的例子当中`cflag=-c`比较短，比较简单，但是如果当我们的编译参数很多很长的时候使用变量就非常有效了，而且如果在一个项目当中如果有成千上万个文件我们像统一改变编译时候的参数的话，我们一个一个改是很麻烦的，但是如果我们使用变量就可以做大一改全改。
+在上面的makefile当中我们定义了一个变量`cflags`并且在编译命令当中使用，我们定义变量的方法其实和shell差不多，我们直接使用`=`可以定义变量，然后使用`$(变量名)`可以使用变量，因为上面的例子当中`cflag=-c`比较短，比较简单，但是如果当我们的编译参数很多很长的时候使用变量就非常有效了，而且如果在一个项目当中如果有成千上万个文件我们像统一改变编译时候的参数的话，我们一个一个改是很麻烦的，但是如果我们使用变量就可以做到一改全改。
+
+### Makefile当中的include命令
+
+在makefile当中我们也可以使用include命令去包含其他的makefile文件，比如我们将上面的makefile文件分成两个部分`makefile`和`submakefile`:
+
+makefile:
+
+```makefile
+
+include submakefile
+
+demo.o: demo.c 
+	gcc $(cflags) demo.c -o demo.o
+
+myprint.o: myprint.c 
+	gcc $(cflags) myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o out
+```
+
+submakefile:
+
+```makefile
+
+cflags=-c
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o out
+```
+
+然后在目录下执行make命令， 得到的效果和前文当中提到的makefile结果是一样的，这就相当于将submakefile的内容放到include语句的位置。
+
+
 
