update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -123,5 +123,50 @@ main: demo.o myprint.o
 
 然后在目录下执行make命令， 得到的效果和前文当中提到的makefile结果是一样的，这就相当于将submakefile的内容放到include语句的位置。
 
+### Makefile中的PHONY
 
+在上面谈到的makefile当中有一个`clean`的编译目标用于清除我们编译的结果文件，现在我们在当前的目录下面增加一个文件`clean`在执行make命令，我们的makefile文件如下：
 
+```makefile
+cflags=-c
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o main
+
+demo.o: demo.c 
+	gcc $(cflags) demo.c -o demo.o
+
+myprint.o: myprint.c 
+	gcc $(cflags) myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o main
+```
+
+然后执行下面的命令（touch命令是新增一个文件，touch clean 就是往目录中增加一个名字为clean的文件）：
+
+![](../../images/tools/makfile05.png)
+
+我们可以看到当目录下面增加一个clean文件之后，我们使用`make clean`命令的时候，make给我们的提示信息为clean文件是最新的了。这是因为当执行`make 编译目标`，make首先会检查当前目录下面是否存在clean文件如果不存在则执行编译目标clean的命令。如果存在clean文件的话，make会检查编译目标clean的依赖文件是否发生更改，如果发生更改了那么久会执行clean对应的命令，但是在上面的makefile当中clean没有依赖文件，因此相当于他的依赖文件没有发生改变，make不会执行编译目标clean对应的命令了。
+
+但是我们的需求是仍然希望执行clean之后的命令，这个时候我们就可以使用PHONY了，他可以保证即使存在clean文件的时候，make命令依然会执行编译目标clean对应的命令。
+
+```makefile
+
+cflags=-c
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o main
+
+demo.o: demo.c 
+	gcc $(cflags) demo.c -o demo.o
+
+myprint.o: myprint.c 
+	gcc $(cflags) myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean # 增加这一行
+```
+
+执行结果如下图所示：
+
+![](../../images/tools/makfile06.png)
