--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -146,7 +146,7 @@ clean:
 
 ![](../../images/tools/makfile05.png)
 
-我们可以看到当目录下面增加一个clean文件之后，我们使用`make clean`命令的时候，make给我们的提示信息为clean文件是最新的了。这是因为当执行`make 编译目标`，make首先会检查当前目录下面是否存在clean文件如果不存在则执行编译目标clean的命令。如果存在clean文件的话，make会检查编译目标clean的依赖文件是否发生更改，如果发生更改了那么久会执行clean对应的命令，但是在上面的makefile当中clean没有依赖文件，因此相当于他的依赖文件没有发生改变，make不会执行编译目标clean对应的命令了。
+我们可以看到当目录下面增加一个clean文件之后，我们使用`make clean`命令的时候，make给我们的提示信息为clean文件是最新的了。这是因为当执行`make 编译目标`，make首先会检查当前目录下面是否存在clean文件如果不存在则执行编译目标clean的命令。如果存在clean文件的话，make会检查编译目标clean的依赖文件是否发生更改，如果发生更改了那么就会执行clean对应的命令，但是在上面的makefile当中clean没有依赖文件，因此相当于他的依赖文件没有发生改变，make不会执行编译目标clean对应的命令了。
 
 但是我们的需求是仍然希望执行clean之后的命令，这个时候我们就可以使用PHONY了，他可以保证即使存在clean文件的时候，make命令依然会执行编译目标clean对应的命令。
 
