update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -170,3 +170,31 @@ clean:
 执行结果如下图所示：
 
 ![](../../images/tools/makfile06.png)
+
+我们现在来测试一下当我们命令生成的文件和编译目标不同名的时候，make是如何解释执行makefile的，makefile的内容如下：
+
+```makefile
+
+cflags=-c
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o out # 这里的输出文件是 out 而不是 main 输出文件名字和目标不同名
+
+demo.o: demo.c 
+	gcc $(cflags) demo.c -o demo.o
+
+myprint.o: myprint.c  
+	gcc $(cflags) myprint.c -o myprint.o
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+```
+
+执行结果：
+
+![](../../images/tools/makfile07.png)
+
+从上面的结果我们可以发现，当我们编译的结果文件(out)和编译目标(main)不同名的时候make每次都回去执行这个目标，因为make在进行检测的时候没有发现main这个文件，因此每次执行make命令的时候都会去执行这个编译目标。
+
+### Makefile自动搜索文件
+
