update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -196,5 +196,63 @@ clean:
 
 从上面的结果我们可以发现，当我们编译的结果文件(out)和编译目标(main)不同名的时候make每次都回去执行这个目标，因为make在进行检测的时候没有发现main这个文件，因此每次执行make命令的时候都会去执行这个编译目标。
 
-### Makefile自动搜索文件
+### Makefile的通配符
 
+我们现在修改前面的makefile，修改的结果如下（当前目录下面有两个文件demo.c和myprint.c）：
+
+```makefile
+
+cflags=-c
+
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o main
+
+%.o: %.c 
+	gcc $(cflags) $<
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+```
+
+上面的makefile当中有一个通配符%，其中%.c表示当前目录下面的所有的以.c结尾的文件。上面的makefile与下面的makefile的效果是一样的：
+
+```makefile
+
+cflags=-c
+
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o main
+
+demo.o:demo.c
+	gcc $(cflags) demo.c 
+
+myprint.o:myprint.c
+	gcc $(cflags) myprint.c 
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+
+```
+
+在上面的makefile当中 $< 表示第一个依赖文件，上面的%就是一个通配符，%.c可以匹配任何以.c结尾的文件，你可能会有疑问%.c匹配不是所有的.c文件吗？那么等价的结果不应该是：
+
+```makefile
+
+cflags=-c
+
+main: demo.o myprint.o
+	gcc demo.o myprint.o -o main
+
+demo.o myprint.o:demo.c myprint.c
+	gcc $(cflags) demo.c 
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+
+```
+
+事实上你可以认为make会将通配符匹配的文件一一展开，有几个文件就将产生对应数目的编译目标。
+
+### 
