update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -253,6 +253,12 @@ clean:
 
 ```
 
-事实上你可以认为make会将通配符匹配的文件一一展开，有几个文件就将产生对应数目的编译目标。
+事实上你可以认为make会将通配符匹配的文件一一展开，有几个文件就将产生对应数目的编译目标，而不是将他们都放在一起。
+
+### Makefile文件自动搜索
+
+在一个工程项目当中我们可以会有许多的目录以及源文件，而make命令只会自动搜索当前目录下的文件，如果当前目录下没有那么make命令就会产生错误。
+
+
 
 ### 
