update makefile and add pic

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -259,8 +259,37 @@ clean:
 
 在一个工程项目当中我们可以会有许多的目录以及源文件，而make命令只会自动搜索当前目录下的文件，如果当前目录下没有那么make命令就会产生错误。因此make也给我们提供了一种文件搜索的功能。
 
+在makefile当中，我们可以使用`VAPTH`指定make去搜索文件的路径。我们先来测试一下当我们没有使用`VPATH`的时候指定其他目录下的文件会出现什么情况，我们的文件目录结构如下图所示：
 
+![](../../images/tools/makfile08.png)
 
+我们的makefile内容如下（先把VPATH的那一行注释掉）：
 
+```makefile
 
-### 
+cflags=-c
+
+# VAPTH=./files
+
+main: demo.o myprint.o a.o b.o
+	gcc demo.o myprint.o a.o b.o -o main
+
+demo.o:demo.c
+	gcc $(cflags) demo.c 
+
+myprint.o:myprint.c
+	gcc $(cflags) myprint.c 
+a.o: a.c
+	gcc $(cflags) a.c
+b.o: b.c 
+	gcc $(cflags) b.c
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+
+```
+
+执行结果如下图所示：
+
+![](../../images/tools/makfile09.png)
