update makefile and add pics

--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -269,7 +269,7 @@ clean:
 
 cflags=-c
 
-# VAPTH=./files
+# VPATH=./files
 
 main: demo.o myprint.o a.o b.o
 	gcc demo.o myprint.o a.o b.o -o main
@@ -293,3 +293,68 @@ clean:
 执行结果如下图所示：
 
 ![](../../images/tools/makfile09.png)
+
+我们现在修改我们的makefile文件如下：
+
+```makefile
+
+cflags=-c
+
+VPATH=./files
+
+main: demo.o myprint.o a.o b.o
+	gcc demo.o myprint.o a.o b.o -o main
+
+demo.o:demo.c
+	gcc $(cflags) demo.c 
+
+myprint.o:myprint.c
+	gcc $(cflags) myprint.c 
+
+a.o: a.c
+	gcc $(cflags) $<
+b.o: b.c 
+	gcc $(cflags) $<
+
+clean:
+	rm myprint.o demo.o main
+.PHONY: clean
+
+```
+
+再次执行make命令，执行结果如下图所示：
+
+![](../../images/tools/makfile10.png)
+
+我们可以看到仍然出错了，这是因为虽然make可以找到a.c和b.c的位置，但是在执行编译命令的时候我们执行的依然是`gcc -c a.c`，这条命令是会在当前目录下去寻找`a.c`的，而不会在其他路径下去寻找`a.c`，在这里我们可以使用`$<`去解决这个问题，`$<`表示第一个依赖的文件。
+
+修改之后的makefile文件如下所示：
+
+```makefile
+
+cflags=-c
+
+VPATH=./files
+
+main: demo.o myprint.o a.o b.o
+	gcc demo.o myprint.o a.o b.o -o main
+
+demo.o:demo.c
+	gcc $(cflags) demo.c 
+
+myprint.o:myprint.c
+	gcc $(cflags) myprint.c 
+
+a.o: a.c
+	gcc $(cflags) $<
+b.o: b.c 
+	gcc $(cflags) $<
+
+clean:
+	rm myprint.o demo.o main a.o b.o
+.PHONY: clean
+```
+
+执行结果如下图所示：
+
+![](../../images/tools/makfile11.png)
