--- a/tools/makefile/01.md
+++ b/tools/makefile/01.md
@@ -358,3 +358,18 @@ clean:
 执行结果如下图所示：
 
 ![](../../images/tools/makfile11.png)
+
+如果你想设置多条目录的话，设置的规则为`VPATH=dir1:dir2:dir3:dir4`。
+
+## 总结
+
+在本篇文章当中主要介绍了一些makefile的基础用法，和一些常用的小技巧，虽然不是很难，但是掌握了可以很大的跳高我们的工作效率，也可以方便我们阅读别人写的makefile文件。
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
