update makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -2,4 +2,48 @@
 
 ## 前言
 
-在前面的文章[彻底掌握Makefile（一）]()当中，我们简要的介绍了一些常见的makefile使用方法，
+在前面的文章[彻底掌握Makefile（一）]()当中，我们简要的介绍了一些常见的makefile使用方法，在本篇文章当中我们将继续介绍一些makefile当中的常见用法。
+
+## Makefile中的条件判断
+
+我们在写makefile的时候常常会有通过if语句进行判断的需求，比如说根据不同的文件设置不同的编译器等等。
+
+```makefile
+
+cc=g++
+
+main: demo.c
+	echo $(cc)
+
+ifeq ($(cc), gcc)
+	echo $(cc) = 相等的语句执行了
+else
+	echo $(cc) != 不相等的语句执行了
+endif
+```
+
+上面的makeifle的执行结果如下：
+
+![makfile12](../../images/tools/makfile12.png)
+
+在上面的makefile当中定义了一个变量cc，他的值为gcc。在上面的makefile当中`ifeq`表示如果后边的表达式成立的话，也就是`$(cc)`的值等于`gcc`那么就执行后面的语句，否则执行else后面的语句。根据上面makefile的执行结果来看，$(cc)和gcc不相等，因此和我们的期待的结果是一致的。
+
+我们修改上面的makefile文件如下：
+
+```makefile
+
+cc=g++
+
+main: demo.c
+	echo $(cc)
+
+ifneq ($(cc), gcc)
+	echo $(cc) != gcc
+else
+	echo $(cc) = gcc
+endif
+```
+
+执行上面的makefile文件输出的结果如下：
+
+![makfile12](../../images/tools/makfile13.png)
