--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -47,3 +47,24 @@ endif
 执行上面的makefile文件输出的结果如下：
 
 ![makfile12](../../images/tools/makfile13.png)
+
+在上面的makefile当中`ifneq`的含义表示如果不相等，因为g++不等于gcc，因此这个满足条件，程序执行的结果满足条件。
+
+关于make的输出问题，当makefile执行到`echo $(cc) != gcc`的时候，首先这条命令会被make输出，然后make会执行这条命令，而这条命令是输出`g++ != gcc`，因此才会有上面的输出。`echo g++ != gcc`，而执行这条命令还会输出`g++ != gcc`，看到这应该能够理解上面的makefile的输出结果了。
+
+前面两个关键字的语法如下所示：
+
+```makefile
+ifeq (<arg1>, <arg2>)
+ifeq '<arg1>' '<arg2>'
+ifeq "<arg1>" "<arg2>"
+ifeq "<arg1>" '<arg2>'
+ifeq '<arg1>' "<arg2>"
+
+ifneq (<arg1>, <arg2>)
+ifneq '<arg1>' '<arg2>'
+ifneq "<arg1>" "<arg2>"
+ifneq "<arg1>" '<arg2>'
+ifneq '<arg1>' "<arg2>"
+```
+
