update makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -6,6 +6,8 @@
 
 ## Makefile中的条件判断
 
+### ifeq 和 ifneq
+
 我们在写makefile的时候常常会有通过if语句进行判断的需求，比如说根据不同的文件设置不同的编译器等等。
 
 ```makefile
@@ -67,4 +69,80 @@ ifneq "<arg1>" "<arg2>"
 ifneq "<arg1>" '<arg2>'
 ifneq '<arg1>' "<arg2>"
 ```
+
+### ifdef 和 ifndef
+
+除了上面的两个关键字之外，make还给我们提供了另外两个关键字`ifdef`和`ifndef`。
+
+`ifdef`和`ifndef`用于判断表达式是否定义过，或者是否为空：
+
+```makefile
+foo = 1
+main: demo.c
+	echo demo
+ifdef foo
+	echo define foo
+else
+	echo not define foo
+endif
+
+```
+
+上面的makefile的输出结果如下：
+
+![makfile12](../../images/tools/makfile14.png)
+
+在上面的makefile当中我们定义了foo，因此`ifdef`判断正确，输出`define foo`，现在修改上面的makefile如下所示说：
+
+```makefile
+main: demo.c
+	echo demo
+ifdef foo
+	echo define foo
+else
+	echo not define foo
+endif
+```
+
+![makfile12](../../images/tools/makfile15.png)
+
+在上面的makefile当中我们没有定义`foo`，因此在上面的makefile当中会输出`not define foot`。
+
+我们在来看一个结果比较令人疑惑的makefile:
+
+```makefile
+foo = 
+main: demo.c
+	echo demo
+ifdef foo
+	echo define foo
+else
+	echo not define foo
+endif
+
+```
+
+在上面的makefile当中我们定义了foo，但是他没有值，我们看一下这个makefile的输出结果：
+
+![makfile12](../../images/tools/makfile15.png)
+
+上面makefile的输出表示`foo`没有被定义，因此当我们定义一个空变量的时候和不定义的效果是一样的。
+
+```makefile
+bar =
+foo = $(bar)
+main: demo.c
+	echo demo
+ifdef foo
+	echo define foo
+else
+	echo not define foo
+endif
+```
+
+在上面的makefile当中我们定义了一个空的变量`bar`但是我们令`foot=$(bar)`我们看一下上面的makefile文件的输出：
+
+![makfile12](../../images/tools/makfile17.png)
+
+可以看出是定义了foo的虽然foo的真实的值也为空，从这里也可以看出`ifdef`和`ifndef`在进行判断的时候并不会将变量直接展开，而是直接判断成不为空。
 
