--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -146,3 +146,25 @@ endif
 
 可以看出是定义了foo的虽然foo的真实的值也为空，从这里也可以看出`ifdef`和`ifndef`在进行判断的时候并不会将变量直接展开，而是直接判断成不为空。
 
+## Makfile中的函数
+
+在makefile当中除了能够使用条件表达式之外我们还可以使用函数，在makefile当中函数的使用规则如下：
+
+```makefiel
+$(<function> <arguments>)
+或者
+将()替换为{}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
