update makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -151,12 +151,39 @@ endif
 在makefile当中除了能够使用条件表达式之外我们还可以使用函数，在makefile当中函数的使用规则如下：
 
 ```makefiel
-$(<function> <arguments>)
+$(<函数名> <函数参数>)
 或者
 将()替换为{}
 ```
 
+函数的调用规则如上图所示，函数参数用,隔开。
 
+### 字符串函数
+
+#### subst 
+
+```makefile
+$(subst <from>,<to>,<text>)
+```
+
+- 字符串替换函数。
+- <text>表示文本，这个函数会将text当中是<from>的字符串替换为<to>。
+
+```makefile
+s = ii am learning makefile
+ss = $(subst ii, you, $(s))
+
+main: demo.c
+	echo demo
+	echo $(s)
+	echo $(ss)
+```
+
+上面的makefile执行结果如下图所示：
+
+![makfile12](../../images/tools/makfile18.png)
+
+从上面的结果我们可以看出，确实将字符串s当中的ii替换成了you!
 
 
 
