update makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -185,13 +185,30 @@ main: demo.c
 
 从上面的结果我们可以看出，确实将字符串s当中的ii替换成了you!
 
+#### patsubst
 
+```
+$(patsubst <pattern>,<replacement>,<text>)
+```
 
+- pattern 表示第一个参数，用于表示如何对 text 进行匹配。
+- replacement 表示第二个参数 表示如何对匹配的字符进行重写。
+- patsubst在进行匹配替换的时候，会先将字符串text根据空格或者tab键或者回车换行符进行分割，然后一一的进行替换和匹配。
 
+这个函数也是一个字符串替换函数，但是与上面的函数不同的是这是一个模式替换。我们直接根据例子来进行分析：
 
+```makefile
+s = a.c b.c d.c abc.c abo.c
+ss = $(patsubst %.c, %.o, $(s))
 
+main: demo.c
+	echo demo
+	echo $(s)
+	echo $(ss)
+```
 
+执行make命令上面的makefile的输出结果如下图所示：
 
+![makfile12](../../images/tools/makfile19.png)
 
-
-
+从上面的结果我们可以看出，patsubst函数将所有的.c文件的后缀都变成了.o。在上面的patsubst函数当中%符号是一个通配符，他匹配了.c前面的所有符号
