update makefile and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -211,4 +211,11 @@ main: demo.c
 
 ![makfile12](../../images/tools/makfile19.png)
 
-从上面的结果我们可以看出，patsubst函数将所有的.c文件的后缀都变成了.o。在上面的patsubst函数当中%符号是一个通配符，他匹配了.c前面的所有符号
+从上面的结果我们可以看出，patsubst函数将所有的.c文件的后缀都变成了.o。
+
+- 在上面的makefile当中首先会将\$(s)当中的字符串按照回车换行、空格以及tab键将\$(s)当中的进行分割，然后一个一个进行patsubst操作，然后将得到结果合并起来。
+
+- 在上面的patsubst函数当中%符号是一个通配符，他匹配了.c前面的所有符号。
+- 在pattern当中的符号为"%.c"，这个表示用%匹配了.c前面的所有的字符。
+- 在replacement当中的字符串为"%.o"，这个%用于表示在pattern当中匹配到的字符串，比如对于abo.c来说%就代表了abo，因此被替换的字符串就是abo.o。
+
