--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -219,3 +219,6 @@ main: demo.c
 - 在pattern当中的符号为"%.c"，这个表示用%匹配了.c前面的所有的字符。
 - 在replacement当中的字符串为"%.o"，这个%用于表示在pattern当中匹配到的字符串，比如对于abo.c来说%就代表了abo，因此被替换的字符串就是abo.o。
 
+你如果你对Python有所了解的话，那么上面的替换代码等价的Python代码如下所示：
+
+![makfile12](../../images/tools/makfile20.png)
