--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -225,3 +225,19 @@ main: demo.c
 
 #### Strip
 
+```makefile
+$(strip <string>)
+```
+
+- 主要功能去掉字符串 string 首尾的空格。
+
+#### findstring
+
+```
+$(findstring <find>,<text>)
+```
+
+- 这个函数的作用是从字符串<text>当中寻找字符串<find>，如果找到了字符串<find>就返回字符串<find>，否则返回空。
+
+
+
