updata makefile and add pic

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -239,5 +239,29 @@ $(findstring <find>,<text>)
 
 - 这个函数的作用是从字符串<text>当中寻找字符串<find>，如果找到了字符串<find>就返回字符串<find>，否则返回空。
 
+Filter
 
+```makeifle
+$(filter <pattern...>,<text>)
+```
+
+这是一个过滤函数，这个函数执行时，首先会根据空格或者tab键或者回车换行符进行分割，然后一一的进行filter函数的操作。然后遍历每一个被分割出来的字符，如果不满足pattern的规则的话对应的字符就会被过滤掉。
+
+```makefile
+s = a.c abo.c s.o s.y x.o x.y
+ss = $(filter %.c %.o, $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+上面的makefile执行之后输出的结果如下图所示：
+
+![makfile12](../../images/tools/makfile21.png)
+
+可以看过滤掉了不是以.c和.o结尾的文件。
+
+上面的过滤函数对应的Python代码如下所示：
+
+![makfile12](../../images/tools/makfile22.png)
 
