updata makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -239,7 +239,7 @@ $(findstring <find>,<text>)
 
 - 这个函数的作用是从字符串<text>当中寻找字符串<find>，如果找到了字符串<find>就返回字符串<find>，否则返回空。
 
-Filter
+filter
 
 ```makeifle
 $(filter <pattern...>,<text>)
@@ -265,3 +265,16 @@ main: demo.c
 
 ![makfile12](../../images/tools/makfile22.png)
 
+filter-out
+
+这个函数和filter的用法是一样的只不过，作用刚好相反，filter是保存符合条件的字符串，filter-out是保存不符合条件的字符串。
+
+```makefile
+s = a.c abo.c s.o s.y x.o x.y
+ss = $(filter-out %.c %.o, $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+![makfile12](../../images/tools/makfile22.png)
