updata makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -279,3 +279,21 @@ main: demo.c
 
 ![makfile12](../../images/tools/makfile23.png)
 
+#### sort 
+
+这个函数主要是用于帮助字符串排序的，同时还会取出分割之后相同的字符串。
+
+```makefile
+s = g a b c d e f  a a a a 
+ss = $(sort $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+以上的makefile输出结果如下图所示：
+
+![makfile12](../../images/tools/makfile24.png)
+
+从上面的输出结果我们可以验证sort不仅可以给字符串排序还会去除相同的字符串。
+
