updata makefile2 and add pics

--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -297,3 +297,20 @@ main: demo.c
 
 从上面的输出结果我们可以验证sort不仅可以给字符串排序还会去除相同的字符串。
 
+#### word
+
+```makefile
+$(word <n>,<text>)
+```
+
+这个功能很简单，返回<text>当中第<n>个字符。
+
+```makefile
+s = g a b c d e f  a a a a 
+ss = $(word 1, $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+![makfile12](../../images/tools/makfile25.png)
