--- a/tools/makefile/02.md
+++ b/tools/makefile/02.md
@@ -307,10 +307,69 @@ $(word <n>,<text>)
 
 ```makefile
 s = g a b c d e f  a a a a 
-ss = $(word 1, $(s))
+ss = $(word 1, $(s)) # 取出第一个字符
 
 main: demo.c
 	echo $(ss)
 ```
 
 ![makfile12](../../images/tools/makfile25.png)
+
+#### wordlist 
+
+```makefile
+$(wordlist <start>,<end>,<text>)
+```
+
+这个也是从字符串当中取出字符，是取出第<start>个字符一直到第<end>个字符。
+
+```makefile
+s = g a b c d e f  a a a a 
+ss = $(wordlist 1, 5, $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+
+
+![makfile12](../../images/tools/makfile26.png)
+
+#### words 
+
+统计单词的个数。
+
+```makefile
+s = 1 2 3 4 5
+ss = $(words $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+![makfile12](../../images/tools/makfile27.png)
+
+#### firstword
+
+这个函数主要是用于返回第一个字符串的。
+
+```makefile
+s = 1 2 3 4 5
+ss = $(firstword $(s))
+
+main: demo.c
+	echo $(ss)
+```
+
+![makfile12](../../images/tools/makfile28.png)
+
+在本篇文章当中主要给大家介绍了Makefile当中一些常用的函数和条件语句的使用，整体比较简单，大家可以对照着makefile和结果自己实现一遍，下期我们将在makefile当中的一些其他的函数！
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
+
