update makefile and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -1,2 +1,23 @@
 # 彻底掌握Makeifle（三）
 
+## 前言
+
+在前面的文章[彻底掌握Makefile（一）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247486795&idx=1&sn=1da47724ddaa139d87b8994abefef7cd&chksm=cf0c9142f87b1854f619b6f6d744b6f6c570adb726c857b36787cec7a821cebbaf2b6bd6799f&token=1023752079&lang=zh_CN#rd)和[彻底掌握Makefile（二）](https://mp.weixin.qq.com/s?__biz=Mzg3ODgyNDgwNg==&mid=2247486795&idx=1&sn=1da47724ddaa139d87b8994abefef7cd&chksm=cf0c9142f87b1854f619b6f6d744b6f6c570adb726c857b36787cec7a821cebbaf2b6bd6799f&token=1023752079&lang=zh_CN#rd)当中，我们简要的介绍了一些常见的makefile使用方法，在本篇文章当中我们将继续介绍一些makefile当中的常见用法。
+
+## Makefile中与文件相关的函数
+
+### dir与notdir函数
+
+```makefile
+file = ./files/a.c
+fdir = $(dir $(file))
+nfdir = $(notdir $(file))
+
+main: demo.c
+	echo $(fdir)
+	echo $(nfdir)
+```
+
+dir函数主要书获取文件路径当中的目录部分，而notdir函数主要是获取文件路径当中文件名的部分，执行上面的makefile结果如下所示：
+
+![makfile29](../../images/tools/makfile29.png)
