update makefile3 and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -21,3 +21,35 @@ main: demo.c
 dir函数主要书获取文件路径当中的目录部分，而notdir函数主要是获取文件路径当中文件名的部分，执行上面的makefile结果如下所示：
 
 ![makfile29](../../images/tools/makfile29.png)
+
+### suffix函数
+
+这个函数主要是用于获取文件的后缀名。
+
+```makefile
+file = ./files/a.c
+fdir = $(dir $(file))
+nfdir = $(notdir $(file))
+name = $(suffix $(file))
+main: demo.c
+	echo $(fdir)
+	echo $(nfdir)
+	echo $(name)
+```
+
+上面的makefile执行结果如下下图 所示：
+
+![makfile29](../../images/tools/makfile30.png)
+
+### basename
+
+这个函数用于获取文件路径当中除去后缀名的部分。
+
+```makefile
+file = ./files/a.c
+base = $(basename $(file))
+main: demo.c
+	echo $(base)
+```
+
+![makfile29](../../images/tools/makfile31.png)
