upate makefile and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -53,3 +53,64 @@ main: demo.c
 ```
 
 ![makfile29](../../images/tools/makfile31.png)
+
+### addsuffix
+
+这个函数主要是给文件加上后缀的。
+
+```makefile
+file = ./files/a.c
+base = $(addsuffix .c, $(file))
+main: demo.c
+	echo $(base)
+```
+
+上面的代码执行结果如下：
+
+![makfile29](../../images/tools/makfile32.png)
+
+上面的结果就表示在文件的末尾加上了对应的后缀名。
+
+### addprefix
+
+这个函数的主要作用就是在字符串的前面加上一串字符。
+
+```makefile
+file = files/a.c
+base = $(addprefix ./src/main/, $(file))
+main: demo.c
+	echo $(base)
+
+```
+
+上面的makefile执行结果如下图所示：
+
+![makfile29](../../images/tools/makfile33.png)
+
+### 循环函数foreach
+
+`foreach`函数的主要使用规则为：
+
+```makefile
+$(foreach <var>,<list>,<text>)
+```
+
+我们直接使用一个例子来说明这个情况：
+
+```makefile
+files = a.c b.c c.c d.c
+new_files = $(foreach n, $(files), $(n)pp)
+main: demo.c
+	echo $(new_files)
+```
+
+上面的makefile输出结果如下图所示：
+
+![makfile29](../../images/tools/makfile34.png)
+
+`foreach`函数会将files当中的字符串先按照空格、tab键、回车换行符进行分割，然后将分割后的值一个一个的放入变量`n`当中，然后会产生一个字符串$(n)pp，最终将这些字符串通过空格拼接起来并且赋值给new_files，这才会有最终的结果。
+
+上面的过程对应一个python代码如下所示：
+
+![makfile35](../../images/tools/makfile35.png)
+
