update makefile and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -114,3 +114,42 @@ main: demo.c
 
 ![makfile35](../../images/tools/makfile35.png)
 
+### call函数
+
+call函数在makefile当中可以用于调用我们自定义的一个表达式，他的语法个数如下面所示：
+
+```makefile
+$(call <expression>,<parm1>,<parm2>,...,<parmn>)
+```
+
+- <expression>表示定义的表达式的名字。
+- <parmn>表示第n个参数，我们在<expression>当中可以使用\$(1),\$(2)进行引用。
+
+我们现在有一个需求就是将两个字符中间加上多个横杠，比如下面的makefile。
+
+```makefile
+a=a.c
+b=b.c
+c=$(a)-------$(b)
+main: demo.c
+	echo $(c)
+```
+
+上面的makefile执行结果如下图所示：
+
+![makfile35](../../images/tools/makfile36.png)
+
+但是如果我们想要重复实现这个功能的话，我们就不需要每次都去写这样一个表达式，而是我们应该写一个表达式然后进行调用。
+
+```makefile
+a=a.c
+b=b.c
+c=$(1)-------$(2) # 定义表达式c
+main: demo.c
+	echo $(call c, $(a), $(b)) # c 就是定义好的表达式 这里调用表达式c
+```
+
+上面的makefile输出结果和上面一样：
+
+![makfile35](../../images/tools/makfile37.png)
+
