--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -123,7 +123,7 @@ $(call <expression>,<parm1>,<parm2>,...,<parmn>)
 ```
 
 - <expression>表示定义的表达式的名字。
-- <parmn>表示第n个参数，我们在<expression>当中可以使用\$(1),\$(2)进行引用。
+- <parmn>表示第n个参数，我们在<expression>当中可以使用`$(1),$(2)`进行引用。
 
 我们现在有一个需求就是将两个字符中间加上多个横杠，比如下面的makefile。
 
