--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -153,3 +153,29 @@ main: demo.c
 
 ![makfile35](../../images/tools/makfile37.png)
 
+### 在makefile当中使用shell函数
+
+我们在makefile的表达式当中可以使用shell的函数。
+
+比如现在我们有一个文件叫做`test.txt`，文件的内容如下所示：
+
+```makefile
+a.c b.c c.c d.c
+```
+
+![makfile35](../../images/tools/makfile37.png)
+
+我们的makefile内容如下：
+
+```makefile
+content=$(shell cat test.txt) # 将shell命令的输出内容赋给content
+
+main: demo.c
+	echo $(content) # 输出content
+
+```
+
+上面的makefile执行结果如下图所示：
+
+![makfile35](../../images/tools/makfile38.png)
+
