--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -177,5 +177,31 @@ main: demo.c
 
 上面的makefile执行结果如下图所示：
 
-![makfile35](../../images/tools/makfile38.png)
+![makfile35](../../images/tools/makfile39.png)
 
+## 彩蛋
+
+### @符号
+
+有时候在makefile当中我们不想输出某些命令（如果不进行设置makefile会输出每一条我们执行过的命令），比如下面的makefile。
+
+```makefile
+
+main: demo.c
+	echo hello world
+```
+
+上面的makefile输出结果为：
+
+![makfile35](../../images/tools/makfile40.png)
+
+现在我们不想输出`echo hello world`这条命令，我们可以使用@进行修饰，在makefile当中如果一条命令使用@进行了修饰，那么这条命令就不会输出。
+
+```makefile
+main: demo.c
+	@echo hello world
+```
+
+上面的makefile输出结果如下：
+
+![makfile35](../../images/tools/makfile41.png)
