update makefile3 and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -179,6 +179,16 @@ main: demo.c
 
 ![makfile35](../../images/tools/makfile39.png)
 
+### origin函数
+
+origin这个函数主要是返回变量的定义方式，使用格式如下：
+
+```makefile
+$(origin <variable>) # 其中 variable 是变量名字 这里不需要使用 $ 符号去引用
+```
+
+
+
 ## 彩蛋
 
 ### @符号
@@ -205,3 +215,26 @@ main: demo.c
 上面的makefile输出结果如下：
 
 ![makfile35](../../images/tools/makfile41.png)
+
+### override使用
+
+在使用make命令的时候可以进行变量的设定，这个变量我们可以在makefile文件当中使用：
+
+```makefile
+main: demo.c
+	@echo $(var)  # 使用变量 var
+```
+
+我们现在输入make命令并且指定参数然后查看结果：
+
+![makfile35](../../images/tools/makfile42.png)
+
+可以看到我们指定的变量在makefile当中可以使用了。
+
+但是如果在我们的makefile当中也有一个变量叫做`var`那么makefile当中的`var`就会被覆盖。比如像下面这个例子一样：
+
+![makfile35](../../images/tools/makfile43.png)
+
+如果我们想让我们自己的变量起作用的话我们可以使用override：
+
+![makfile35](../../images/tools/makfile44.png)
