--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -187,6 +187,24 @@ origin这个函数主要是返回变量的定义方式，使用格式如下：
 $(origin <variable>) # 其中 variable 是变量名字 这里不需要使用 $ 符号去引用
 ```
 
+#### GNU make预定义变量：
+
+
+- AR－－＞归档维护程序的名称，默认值为ar
+- ARFLAGS－－＞归档维护程序的选项
+- AS－－＞汇编程序的名称，默认值为as
+- ASFLAGS－－＞汇编程序的选项
+- CC－->C编译器的名称，默认为gcc
+- CPP－－＞C预编译器的名称，默认为$(CC)-E
+- CCFLAGS－－＞C编译器的选项
+- CPPFLAGS－->C预编译的选项
+- CXX－－＞C＋＋编译器的名称，默认为g++
+- CXXFLAGS－－＞C＋＋编译器的选项
+- FC－－＞FORTRAN编译器的名称，默认为f77
+- FFLAGS－－＞FORTRAN编译器的选项
+
+```
+
 
 
 ## 彩蛋
@@ -238,3 +256,4 @@ main: demo.c
 如果我们想让我们自己的变量起作用的话我们可以使用override：
 
 ![makfile35](../../images/tools/makfile44.png)
+
