updata makefile3 and add pics

--- a/tools/makefile/03.md
+++ b/tools/makefile/03.md
@@ -246,6 +246,26 @@ main: demo.c
 
 ![makfile35](../../images/tools/makfile45.png)
 
+### error函数
+
+在makefile当中我们可以使用error函数让makefie停止执行。当我们有需求：让在某种条件下让makefile停止编译
+
+```makefile
+data=data
+
+ifeq ($(data), data)
+$(error "data == data")
+endif
+
+main: main.c
+	gcc main.c
+
+```
+
+现在我们执行makefile，输出结果如下：
+
+![makfile35](../../images/tools/makfile46.png)
+
 ## 彩蛋
 
 ### @符号
@@ -295,4 +315,16 @@ main: demo.c
 如果我们想让我们自己的变量起作用的话我们可以使用override：
 
 ![makfile35](../../images/tools/makfile44.png)
+
+## 总结
+
+在本篇文章当中主要给大家介绍了Makefile当中一些常用的函数的使用，整体比较简单，大家可以对照着makefile和结果自己实现一遍。
+
+---
+
+以上就是本篇文章的所有内容了，我是**LeHung**，我们下期再见！！！更多精彩内容合集可访问项目：<https://github.com/Chang-LeHung/CSCore>
+
+关注公众号：**一无是处的研究僧**，了解更多计算机（Java、Python、计算机系统基础、算法与数据结构）知识。
+
+![](https://img2022.cnblogs.com/blog/2519003/202207/2519003-20220703200459566-1837431658.jpg)
 
